--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,4 +23,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: CiCdSpringBoot
-          path: target/CiCdSpringBoot.jar
+          path: target/CiCdSpringBoot-0.0.1-SNAPSHOT.jar
