--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,88 +1,59 @@
-name: Build and Test
+name: Build and Deploy
 
 on:
   push:
     branches:
-      - docker
+      - main
 
 env:
-  IMAGE_NAME: cicdspringboot
-  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+  IMAGE_NAME: my-docker-image
+  DOCKER_BUILDKIT: 1
 
 jobs:
   build-jar:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Set up Java 8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
         with:
           java-version: 8
 
-      - name: Build JAR
+      - name: Build with Maven
         run: mvn -B package --file pom.xml
 
-      - name: Run Unit Tests
+      - name: Unit tests
         run: mvn test
 
-      - name: Run PMD
-        run: mvn pmd:pmd
-
-      - name: Check Code Coverage
-        run: mvn jacoco:report
+      - name: Code quality analysis
+        run: |
+          mvn pmd:pmd
+          mvn jacoco:report
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: CiCdSpringBoot
-          path: target/CiCdSpringBoot-0.0.1-SNAPSHOT.jar
-
-      - name: Upload Code Coverage Report
         uses: actions/upload-artifact@v2
         with:
-          name: code-coverage-report
-          path: target/site/jacoco/index.html
+          name: CiCdSpringBoot.jar
+          path: target/CiCdSpringBoot.jar
 
   build-docker:
-    needs: build-jar
     runs-on: ubuntu-latest
-    if: success()
+    needs: build-jar
+    if: success('build-jar')
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Log in to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ env.DOCKERHUB_PASSWORD }}
-
-#      - name: Build Docker image
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: .
-#          push: true
-#          tags: ${{ env.IMAGE_NAME }}:latest
-      - name: Build Docker Image
+      - name: Build the Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cicdspringboot:${{ github.sha }}
+          tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
           build-args: |
-            JAR_FILE=target/CiCdSpringBoot-0.0.1-SNAPSHOT.jar
-            APP_NAME=CiCdSpringBoot
-            APP_VERSION=0.0.1-SNAPSHOT
-            APP_PORT=8080
-            APP_OPTS=""
+            JAR_FILE=target/CiCdSpringBoot.jar
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
