--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,59 +1,88 @@
-name: Build and Deploy
+name: Build and Test
 
 on:
   push:
     branches:
-      - main
+      - docker
 
 env:
-  IMAGE_NAME: my-docker-image
-  DOCKER_BUILDKIT: 1
+  IMAGE_NAME: cicdspringboot
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
 jobs:
   build-jar:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
+      - name: Set up Java 8
+        uses: actions/setup-java@v1
         with:
           java-version: 8
 
-      - name: Build with Maven
+      - name: Build JAR
         run: mvn -B package --file pom.xml
 
-      - name: Unit tests
+      - name: Run Unit Tests
         run: mvn test
 
-      - name: Code quality analysis
-        run: |
-          mvn pmd:pmd
-          mvn jacoco:report
+      - name: Run PMD
+        run: mvn pmd:pmd
+
+      - name: Check Code Coverage
+        run: mvn jacoco:report
 
       - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: CiCdSpringBoot
+          path: target/CiCdSpringBoot-0.0.1-SNAPSHOT.jar
+
+      - name: Upload Code Coverage Report
         uses: actions/upload-artifact@v2
         with:
-          name: CiCdSpringBoot.jar
-          path: target/CiCdSpringBoot.jar
+          name: code-coverage-report
+          path: target/site/jacoco/index.html
 
   build-docker:
-    runs-on: ubuntu-latest
     needs: build-jar
-    if: success('build-jar')
+    runs-on: ubuntu-latest
+    if: success()
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Build the Docker image
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ env.DOCKERHUB_PASSWORD }}
+
+#      - name: Build Docker image
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          push: true
+#          tags: ${{ env.IMAGE_NAME }}:latest
+      - name: Build Docker Image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cicdspringboot:${{ github.sha }}
           build-args: |
-            JAR_FILE=target/CiCdSpringBoot.jar
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+            JAR_FILE=target/CiCdSpringBoot-0.0.1-SNAPSHOT.jar
+            APP_NAME=CiCdSpringBoot
+            APP_VERSION=0.0.1-SNAPSHOT
+            APP_PORT=8080
+            APP_OPTS=""
