--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -47,6 +47,8 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build the Docker image
+        run: |
+          docker build . -t ${{ env.IMAGE_NAME }} -f Dockerfile
         uses: docker/build-push-action@v2
         with:
           context: .
