--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -49,13 +49,13 @@ jobs:
       - name: Build the Docker image
         run: |
           docker build . -t ${{ env.IMAGE_NAME }} -f Dockerfile
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
-          build-args: |
-            JAR_FILE=target/*.jar
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          push: true
+#          tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
+#          build-args: |
+#            JAR_FILE=target/*.jar
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
