--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,6 +38,10 @@ jobs:
           name: CiCdSpringBoot.jar
           path: target/CiCdSpringBoot.jar
 
+      - name: list dir
+        run: |
+          ls
+
   build-docker:
     runs-on: ubuntu-latest
     needs: build-jar
@@ -47,7 +51,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: list dir
-        working-directory: app
         run: |
           ls
 
