--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,31 +42,36 @@ jobs:
         run: |
           ls
 
-  build-docker:
-    runs-on: ubuntu-latest
-    needs: build-jar
-    if: success('build-jar')
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml -DoutputDirectory=./target
-
-      - name: list dir
-        run: |
-          ls
-
       - name: Build the Docker image
+        if: success()
         run: |
           docker build . -t ${{ env.IMAGE_NAME }} -f Dockerfile
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: .
-#          push: true
-#          tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
-#          build-args: |
-#            JAR_FILE=target/*.jar
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+#  build-docker:
+#    runs-on: ubuntu-latest
+#    needs: build-jar
+#    if: success('build-jar')
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - name: Build with Maven
+#        run: mvn -B package --file pom.xml -DoutputDirectory=./target
+#
+#      - name: list dir
+#        run: |
+#          ls
+#
+#      - name: Build the Docker image
+#        run: |
+#          docker build . -t ${{ env.IMAGE_NAME }} -f Dockerfile
+##        uses: docker/build-push-action@v2
+##        with:
+##          context: .
+##          push: true
+##          tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
+##          build-args: |
+##            JAR_FILE=target/*.jar
+#        env:
+#          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+#          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
