--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,36 +42,56 @@ jobs:
         run: |
           ls
 
-      - name: Build the Docker image
-        if: success()
+      - name: list dir target
         run: |
-          docker build . -t ${{ env.IMAGE_NAME }} -f Dockerfile
+          cd target
+          ls
 
-#  build-docker:
-#    runs-on: ubuntu-latest
-#    needs: build-jar
-#    if: success('build-jar')
-#
-#    steps:
-#      - uses: actions/checkout@v2
-#
-#      - name: Build with Maven
-#        run: mvn -B package --file pom.xml -DoutputDirectory=./target
-#
-#      - name: list dir
-#        run: |
-#          ls
-#
+      - name: Cache target folder
+        uses: actions/cache@v2
+        with:
+          path: target/*.jar
+          key: ${{ runner.os }}-target-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-target-
+
 #      - name: Build the Docker image
+#        if: success()
 #        run: |
 #          docker build . -t ${{ env.IMAGE_NAME }} -f Dockerfile
-##        uses: docker/build-push-action@v2
-##        with:
-##          context: .
-##          push: true
-##          tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
-##          build-args: |
-##            JAR_FILE=target/*.jar
-#        env:
-#          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-#          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+  build-docker:
+    runs-on: ubuntu-latestdocker run -p 8080:8080 cicdspringboot
+    needs: build-jar
+    if: success('build-jar')
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Load cached target folder
+        uses: actions/cache@v2
+        with:
+          path: target/*.jar
+          key: ${{ runner.os }}-target-${{ hashFiles('**/pom.xml') }}
+
+      - name: list dir
+        run: |
+          ls
+
+      - name: list dir target
+        run: |
+          cd target
+          ls
+
+      - name: Build the Docker image
+        run: |
+          docker build . -t ${{ env.IMAGE_NAME }} -f Dockerfile
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          push: true
+#          tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
+#          build-args: |
+#            JAR_FILE=target/*.jar
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
