--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -60,7 +60,7 @@ jobs:
 #          docker build . -t ${{ env.IMAGE_NAME }} -f Dockerfile
 
   build-docker:
-    runs-on: ubuntu-latestdocker run -p 8080:8080 cicdspringboot
+    runs-on: ubuntu-latest
     needs: build-jar
     if: success('build-jar')
 
